# spendify

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.it.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  amici.html  app.py  desktop.spec  docker-compose.release.yml  docker-compose.yml  getting-started.de.html  getting-started.en.html  getting-started.es.html  getting-started.fr.html  getting-started.html  getting-started.ja.html  getting-started.nl.html  getting-started.pl.html  getting-started.pt.html  index.de.html  index.en.html  index.es.html  index.fr.html  index.html  index.ja.html  index.nl.html  index.pl.html  index.pt.html  install.ps1  (+11 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  install-test.yml  mirror-to-gitlab.yml  publish.yml  release-linux.yml  release.yml  sync-wiki.yml
api/: dependencies.py  main.py  schemas.py
api/routers/: import_.py  rules.py  settings.py  (+2 more)
benchmark/: .custom_packages  .pending_issues.md  .rsync-bench-exclude  .version  ACCURACY_EQUIVALENCE.md  README.md  accuracy_groups.py  aggregate_results.py  azure_benchmark.py  azure_run_cloud.sh  bench_guard.ps1  bench_guard.sh  bench_help.ps1  bench_help.sh  bench_load_usb.ps1  bench_load_usb.sh  bench_pull_ssh.ps1  bench_pull_ssh.sh  bench_pull_usb.ps1  bench_pull_usb.sh  bench_push_ssh.ps1  bench_push_ssh.sh  bench_push_usb.ps1  bench_push_usb.sh  bench_report.sh  bench_save_usb.ps1  bench_save_usb.sh  benchmark_categorizer.py  benchmark_classifier.py  benchmark_models.csv  benchmark_pipeline.py  benchmark_plan.csv  benchmark_stats.py  cleanup_benchmark.ps1  cleanup_benchmark.sh  diagnose.ps1  generate_synthetic_files.py  hw_detect.py  hw_monitor.py  machine_names.csv  (+6 more)
chat_bot/: __init__.py  engine.py  faq_classifier.py  faq_store.py  kb_store.py  prompts.json  rag.py
config/: __init__.py  models_registry.yaml  system_settings.yaml
core/: categorizer.py  classifier.py  description_cleaner.py  history_engine.py  llm_backends.py  model_manager.py  models.py  normalizer.py  nsi_lookup.py  orchestrator.py  prompt_guard.py  runtime_optimizations.yaml  sanitizer.py  schemas.py  static_rules.json
db/: models.py  repository.py  taxonomy_defaults.py
desktop/: __main__.py  launcher.py  splash.html
docker/: Dockerfile  Dockerfile.benchmark  benchmark_entrypoint.sh  conda_benchmark.yml  docker-compose.release.yml  docker-compose.yml
docs/: configurazione.en.md  configurazione.md  database.en.md  database.md  deployment.en.md  deployment.md  desktop_build_and_test.it.md  desktop_build_and_test.md  deterministic_rules.en.md  deterministic_rules.md  deterministic_tools.en.md  deterministic_tools.md  developer_guide.en.md  developer_guide.md  guida_classificazione.en.md  guida_classificazione.md  guida_utente.en.md  guida_utente.md  installation_macos.it.md  installation_macos.md  installation_windows.it.md  installation_windows.md  installazione.en.md  installazione.md  landing_page.en.md  landing_page.md  pipeline.en.md  pipeline.md  progetto.en.md  progetto.md  reference_guide.en.md  reference_guide.md  release_process.it.md  release_process.md  spendify_v3.0.tex
installer/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
packaging/: release.sh
prompts/: categorizer.json  classifier.json  description_cleaner.json  footer_detector.json  prompt_hashes.json
quarantine/: categorization.py  ledger_server_v2.py  llm_services.py  make_brand_pdf.py  reconciliation_page.py  run_all_benchmarks.sh  run_benchmark.ps1  run_benchmark.sh  run_benchmark_dual.sh  setup_benchmark_models.sh
reports/: generator.py  template_report.html.j2
requirements/: diagramma_flusso_1.md  diagramma_flusso_2.md  flusso_idea_1.md  flusso_idea_2.md  requirements.md
scripts/: .rsync-bench-exclude  bench_pull_ssh.ps1  bench_pull_ssh.sh  bench_pull_usb.ps1  bench_pull_usb.sh  bench_push_ssh.ps1  bench_push_ssh.sh  bench_push_usb.ps1  bench_push_usb.sh  build_static_rules.py
services/: __init__.py  budget_service.py  category_service.py  history_service.py  import_service.py  llm_service.py  nsi_taxonomy_service.py  review_service.py  rule_service.py  settings_service.py  transaction_service.py
support/: core_logic.py  formatting.py  globals.py  load_models.py  logging.py  output_classes.py  review_df_format.py  review_imported_data.py  review_values.py  state.py
tests/: .gitignore  .version  README.md  aggregate_results.py  benchmark_categorizer.py  benchmark_models.csv  benchmark_pipeline.py  cleanup_benchmark.ps1  cleanup_benchmark.sh  diagnose.ps1  generate_synthetic_files.py  hw_monitor.py  monitor_benchmark.ps1  monitor_benchmark.py  monitor_benchmark.sh  run_all_benchmarks.sh  run_benchmark.ps1  run_benchmark.sh  run_benchmark_dual.sh  run_benchmark_full.ps1  run_benchmark_full.sh  setup_benchmark_models.sh  test_api_rules.py  test_api_settings.py  test_api_transactions.py  test_app_entrypoint.py  test_backends.py  test_border_detection.py  test_categorizer.py  test_classification_tracking.py  test_classifier_multistep.py  test_classifier_phase0.py  test_description_cleaner.py  test_fan_out.py  test_footer_stripping.py  test_history_engine.py  test_launcher_instance_lock.py  test_llm_import.py  test_llm_service.py  test_normalizer.py  (+16 more)
tools/: azure_benchmark.py  compute_prompt_hashes.py  coupling_baseline.json  coupling_check.py  debug_pipeline.py  run_cloud_benchmarks.sh  verify_bench_csv.py
ui/: analysis_page.py  budget_page.py  budget_vs_actual_page.py  bulk_edit_page.py  chat_page.py  checklist_page.py  history_page.py  onboarding_page.py  reconciliation_page.py  registry_page.py  report_page.py  review_page.py  rules_page.py  settings_page.py  sidebar.py  taxonomy_page.py  upload_page.py
(+214 files in other folders)
