[project]
name = "spendif-ai"
version = "3.0.0"
description = "Unified personal finance ledger with hybrid LLM pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Luigi Corsaro" }]
requires-python = ">=3.13"
dependencies = [
    # Core data
    "pandas>=2.2",
    "openpyxl>=3.1",
    "chardet>=5.0",
    # LLM backends (direct SDKs — no LangChain)
    "openai>=1.30",
    "anthropic>=0.28",
    "requests>=2.31",
    "llama-cpp-python>=0.3.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Configuration
    "python-dotenv>=1.0",
    # UI
    "streamlit>=1.35",
    "plotly>=5.20",
    # Reports
    "jinja2>=3.1",
    # REST API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "huggingface-hub>=1.8.0",
    "azure-ai-ml>=1.32.0",
    "azure-identity>=1.25.3",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
markers = [
    "llm: tests requiring a running LLM backend (Ollama/OpenAI)",
]
addopts = "-m 'not llm'"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app.py",           # Streamlit entrypoint — top-level st.* calls, not importable in pytest
    "desktop/*",        # GUI launcher — requires pywebview display, not testable in headless CI
    "quarantine/*",     # archived/dead code
    "benchmark/*",      # standalone benchmark scripts
    "tools/*",          # dev tooling
]

[tool.bandit]
exclude_dirs = ["tests", "tools", "benchmark", "scripts", "quarantine"]
skips = ["B101"]  # assert used in tests / dev tooling
