[project]
name = "spendif-ai"
version = "3.0.0"
description = "Unified personal finance ledger with hybrid LLM pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Luigi Corsaro" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core data
    "pandas>=2.2",
    "openpyxl>=3.1",
    "chardet>=5.0",
    # LLM backends (direct SDKs — no LangChain)
    "openai>=1.30",
    "anthropic>=0.28",
    "requests>=2.31",
    "llama-cpp-python>=0.3.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Configuration
    "python-dotenv>=1.0",
    # UI
    "streamlit>=1.35",
    "plotly>=5.20",
    # Reports
    "jinja2>=3.1",
    # REST API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Security pin: idna<3.15 carries CVE-2026-45409 (pip-audit gate).
    # Floor declared here even though idna is a transitive dep of httpx/requests
    # so a fresh `uv lock` resolves to >=3.15.
    "idna>=3.15",
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "huggingface-hub>=1.8.0",
    "azure-ai-ml>=1.32.0",
    "azure-identity>=1.25.3",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
    "pyinstaller>=6.0",
    # GUI backend for pywebview:
    # - macOS uses Cocoa (built into pyobjc) — no extra dep
    # - Windows uses WebView2 (system component) — no extra dep
    # - Linux uses GTK. We do NOT pip-install PyGObject/pycairo here —
    #   instead the .deb / .rpm depends on system `python3-gi` and
    #   `python3-cairo`, and launch.sh creates the venv with
    #   `--system-site-packages` so those system modules are visible
    #   inside the venv. Reasons:
    #     • pycairo has no Linux wheels on PyPI — every pip install
    #       triggers a source build that needs libcairo2-dev.
    #     • PyGObject wheels exist but require matching system libs
    #       (gir1.2-webkit2-4.1, libgirepository) which we already
    #       depend on from the .deb side — there is no reason to
    #       install another copy via pip.
]

[tool.pytest.ini_options]
markers = [
    "llm: tests requiring a running LLM backend (Ollama/OpenAI)",
]
addopts = "-m 'not llm'"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app.py",           # Streamlit entrypoint — top-level st.* calls, not importable in pytest
    "desktop/*",        # GUI launcher — requires pywebview display, not testable in headless CI
    "quarantine/*",     # archived/dead code
    "benchmark/*",      # standalone benchmark scripts
    "tools/*",          # dev tooling
]

[tool.bandit]
exclude_dirs = ["tests", "tools", "benchmark", "scripts", "quarantine"]
skips = ["B101"]  # assert used in tests / dev tooling
